[package]
name = "stockpull"
version = "0.1.0"
edition = "2021"
authors = ["Flippette <quangdatle2006@outlook.com>"]
license = "MIT"

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
color-eyre = "0.6"
clap = { version = "3.2", features = ["derive"] }
yahoo_finance_api = "1.3"

[profile.release]
lto = "thin"
strip = "symbols"
